--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,148 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Starter Site</h1>
-    <p>Let your imagination run wild!</p>
+    <div class="content">
+      <div class="header">
+        <div class="buySide">
+          <div class="bondName">
+            <h4>Guangzhou R&F Properties</h4>
+            <h1 class="ticker">GZRFPR 5 7/8 13/02/2023</h1>
+          </div>
+          <h2 class="additionalInfo">
+            China · Financials · BB- · USD · XS1720054383
+          </h2>
+        </div>
+        <div class="bookmark">
+          <div class="bookmarkInfo active" data-cy="bookmark">
+            <div>
+              <div class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <g fill="#F3AE4B">
+                    <path
+                      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+              <h3 class="_18zb6k3">SH</h3>
+              <h4 class="_1msjved">a day ago</h4>
+            </div>
+          </div>
+        </div>
+        <div class="sellSide">
+          <div class="bondName">
+            <h4>Zhenro Properties Group Limited</h4>
+            <h1 class="ticker">ZHPRHK 9 3/20 08/03/2022</h1>
+          </div>
+          <h2 class="additionalInfo">
+            China · Financials · B · USD · XS1960071303
+          </h2>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="header">
+        <div class="buySide">
+          <div class="bondName">
+            <h4>Guangzhou R&F Properties</h4>
+            <h1 class="ticker">GZRFPR 5.875% 13/02/2023</h1>
+          </div>
+          <h2 class="additionalInfo">China</h2>
+          <h2 class="additionalInfo">Financials</h2>
+          <h2 class="additionalInfo">BB-</h2>
+          <h2 class="additionalInfo">USD</h2>
+          <h2 class="additionalInfo">XS1720054383</h2>
+        </div>
+        <div class="bookmark">
+          <div class="bookmarkInfo active" data-cy="bookmark">
+            <div>
+              <div class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <g fill="#F3AE4B">
+                    <path
+                      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+              <h3 class="_18zb6k3">SH</h3>
+              <h4 class="_1msjved">a day ago</h4>
+            </div>
+          </div>
+        </div>
+        <div class="sellSide">
+          <div class="bondName">
+            <h4>Zhenro Properties Group Limited</h4>
+            <h1 class="ticker">ZHPRHK 9.150% 08/03/2022</h1>
+          </div>
+          <h2 class="additionalInfo">China</h2>
+          <h2 class="additionalInfo">Financials</h2>
+          <h2 class="additionalInfo">B</h2>
+          <h2 class="additionalInfo">USD</h2>
+          <h2 class="additionalInfo">XS1960071303</h2>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="header">
+        <div class="buySide">
+          <div class="bondName">
+            <h4>Guangzhou R&F Properties</h4>
+            <h1 class="ticker borderBottom">GZRFPR 5.875% 13/02/2023</h1>
+          </div>
+          <h2 class="additionalInfo right">China</h2>
+          <h2 class="additionalInfo right">Financials</h2>
+          <h2 class="additionalInfo right">BB-</h2>
+          <h2 class="additionalInfo right">USD</h2>
+          <h2 class="additionalInfo right">XS1720054383</h2>
+        </div>
+        <div class="bookmark">
+          <div class="bookmarkInfo active" data-cy="bookmark">
+            <div>
+              <div class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <g fill="#F3AE4B">
+                    <path
+                      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+              <h3 class="_18zb6k3">SH</h3>
+              <h4 class="_1msjved">a day ago</h4>
+            </div>
+          </div>
+        </div>
+        <div class="sellSide">
+          <div class="bondName">
+            <h4>Zhenro Properties Group Limited</h4>
+            <h1 class="ticker borderBottom">ZHPRHK 9.150% 08/03/2022</h1>
+          </div>
+          <h2 class="additionalInfo left">China</h2>
+          <h2 class="additionalInfo left">Financials</h2>
+          <h2 class="additionalInfo left">B</h2>
+          <h2 class="additionalInfo left">USD</h2>
+          <h2 class="additionalInfo left">XS1960071303</h2>
+        </div>
+      </div>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
