--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <title>Static Site Starter</title>
   </head>
   <body>
+    <h1>Ready Steady Go! <i class="fas fa-fire"></i></h1>
     <script src="./js/app.js"></script>
   </body>
 </html>
