Added typography examples to main page

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,18 @@
     <title>Static Site Starter</title>
   </head>
   <body>
-    <h1>Ready Steady Go! <i class="fas fa-fire"></i></h1>
-    <script src="./js/app.js"></script>
+    <div class="mainContainer">
+      <label for="" class="secondaryText">H1</label>
+      <h1>The quick brown fox jumps over the lazy dog</h1>
+      <label for="" class="secondaryText">H2</label>
+      <h2>The quick brown fox jumps over the lazy dog</h2>
+      <p>The quick brown fox jumps over the lazy dog</p>
+      <label for="" class="secondaryText">H3</label>
+      <h3>The quick brown fox jumps over the lazy dog</h3>
+      <label for="" class="secondaryText">H4</label>
+      <h4>The quick brown fox jumps over the lazy dog</h4>
+    </div>
+
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
