--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,46 @@
       <h1>The quick brown fox jumps over the lazy dog</h1>
       <label for="" class="secondaryText">H2</label>
       <h2>The quick brown fox jumps over the lazy dog</h2>
-      <p>The quick brown fox jumps over the lazy dog</p>
       <label for="" class="secondaryText">H3</label>
       <h3>The quick brown fox jumps over the lazy dog</h3>
       <label for="" class="secondaryText">H4</label>
       <h4>The quick brown fox jumps over the lazy dog</h4>
+      <label for="" class="secondaryText">p</label>
+      <p>
+        Pooping rainbow while flying in a toasted bread costume in space chase
+        ball of string chew foot, and poop on grasses. Why must they do that
+        flop over. Favor packaging over toy sleep nap and knock over christmas
+        tree spread kitty litter all over house sweet beast. Use lap as chair
+        give attitude poop on grasses sleep nap. Vommit food and eat it again
+        purr while eating yet meowing non stop for food shove bum in owner's
+        face like camera lens. Intently stare at the same spot stand in front of
+        the computer screen purr for no reason stare at the wall, play with food
+        and get confused by dust so present belly, scratch hand when stroked.
+        Intrigued by the shower have secret plans. Sweet beast find something
+        else more interesting, or stare at ceiling. Leave dead animals as gifts
+        find something else more interesting. Lick butt. Sleep in the bathroom
+        sink why must they do that. Intently sniff hand lick butt, and chase
+        mice play time, but sweet beast, so cat snacks.
+      </p>
+
+      <input
+        type="text"
+        class="fontAwesome"
+        name="search"
+        placeholder="&#xf002; Search"
+        value=""
+      />
+      <form action="">
+        <label for="">Email</label>
+        <input
+          type="text"
+          class="fontAwesome"
+          name="search"
+          placeholder=""
+          value=""
+        />
+        <button class="--primary">Primary button</button>
+      </form>
     </div>
 
     <script type="module" src="./js/app.js"></script>
